--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -1,10 +1,13 @@
 {
   "@_0__detected": {
-    "message": "$${0} Detected",
+    "message": "$${0} Erkannt",
     "description": "Number of trackers detected by Ghostery"
   },
   "accept_terms": {
     "message": "Bedingungen akzeptieren"
+  },
+  "ad_blocking": {
+    "message": "Werbeblocker"
   },
   "additional_permissions_required": {
     "message": "Zusätzliche Berechtigungen erforderlich"
@@ -26,8 +29,14 @@
   "all_set__go_with_ghosty_": {
     "message": "Alles bereit! Geh mit Ghosty!"
   },
+  "anti_tracking": {
+    "message": "Anti-Tracking"
+  },
   "any_questions__anytime_": {
     "message": "Haben Sie Fragen? Wir sind immer für Sie da!"
+  },
+  "apply_optimal_privacy_settings_": {
+    "message": "Privatsphäreeinstellungen optimal anwenden:"
   },
   "are_you_sure_": {
     "message": "Sind Sie sicher?"
@@ -42,17 +51,11 @@
   "back": {
     "message": "Zurück"
   },
-  "block_ads": {
-    "message": "Werbung blockieren"
-  },
-  "block_annoyances": {
-    "message": "Belästigungen blockieren"
-  },
-  "block_trackers": {
-    "message": "Tracker blockieren"
-  },
   "blocked": {
     "message": "Blockiert"
+  },
+  "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
+    "message": "Durch Never-Consent erklären Sie Website-Besitzern, Tracking abzulehnen!"
   },
   "cancel": {
     "message": "Abbrechen"
@@ -101,6 +104,9 @@
   "enable_ghostery_to_get_started": {
     "message": "Aktivieren Sie Ghostery, um loszulegen"
   },
+  "enable_never_consent_": {
+    "message": "Never-Consent aktivieren?"
+  },
   "essential": {
     "message": "Essenziell",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
@@ -125,7 +131,7 @@
     "message": "Ghostery stoppt Tracker und verhindert, dass Sie profiliert werden und Ihre persönlichen Informationen an Datenmakler für deren eigenen Profit verkauft werden."
   },
   "ghostery_options": {
-    "message": "Ghostery Options"
+    "message": "Ghostery-Optionen"
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery-Datenschutzrichtlinie"
@@ -140,6 +146,12 @@
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
     "message": "Es existiert dank der Mikro-Beiträge jedes Ghostery-Nutzers, der sich entscheidet, Tracker-Informationen an whotracks.me zu senden. Der Tracker-Input ermöglicht es Ghostery, Echtzeit-Informationen über Tracker und Schutz für die gesamte Ghostery-Nutzergemeinschaft zu bieten."
   },
+  "learn_more": {
+    "message": "Weitere Informationen"
+  },
+  "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
+    "message": "Machen Sie Ghostery zum Rundumschutz für Ihre Privatsphäre, der Popups und Tracking ablehnt, oder tun Sie es selbst!"
+  },
   "manifest_name": {
     "message": "Ghostery – Datenschutzorientierter Werbeblocker"
   },
@@ -153,20 +165,38 @@
   "more_information_on_@_0__": {
     "message": "Mehr Informationen über $${0}."
   },
+  "never_consent": {
+    "message": "Never-Consent"
+  },
+  "never_consent_is_disabled": {
+    "message": "Never-Consent ist deaktiviert"
+  },
+  "never_consent_is_enabled": {
+    "message": "Never-Consent ist aktiviert"
+  },
+  "no": {
+    "message": "Nein"
+  },
   "off": {
     "message": "Aus"
   },
+  "ok": {
+    "message": "OK"
+  },
   "on": {
     "message": "An"
+  },
+  "on_all_websites": {
+    "message": "auf allen Websites"
+  },
+  "on_this_website": {
+    "message": "auf dieser Website"
   },
   "page_load_": {
     "message": "Laden der Seite"
   },
   "privacy_policy": {
     "message": "Datenschutzrichtlinie"
-  },
-  "privacy_protection_on_this_site": {
-    "message": "Schutz der Privatsphäre auf dieser Website"
   },
   "report_a_broken_page": {
     "message": "Fehlerhafte Seite melden"
@@ -188,21 +218,23 @@
   "statistical_report": {
     "message": "Statistischer Bericht"
   },
-  "statistical_report___context": {
-    "message": "Statistischer Bericht",
-    "description": "desc"
-  },
   "submit_a_new_tracker": {
     "message": "Neuen Tracker senden"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Die Ghostery-Browsererweiterung ist in Ihrem Browser installiert, aber Ghosty macht gerade eine kleine Pause."
   },
+  "tired_of_cookie_popups_": {
+    "message": "HABEN SIE GENUG VON COOKIE-POPUPS?"
+  },
   "tracker_details": {
     "message": "Tracker-Details"
   },
   "trackers": {
     "message": "Tracker"
+  },
+  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
+    "message": "Von Ghostery erkannte Tracker auf dieser Website:&nbsp;$${0}"
   },
   "trackers_preview": {
     "message": "Tracker-Vorschau"
@@ -215,7 +247,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "user_interface": {
-    "message": "User interface"
+    "message": "Benutzeroberfläche"
   },
   "welcome_to": {
     "message": "Willkommen bei"
@@ -228,6 +260,12 @@
   },
   "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Wenn Ghostery aktiviert ist, können Sie sofort sicherer, schneller und mit weniger lästiger Werbung im Internet surfen."
+  },
+  "yes": {
+    "message": "Ja"
+  },
+  "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
+    "message": "Sie können diese Einstellungen im <strong>Ghostery-Steuerbereich</strong> ändern."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
     "message": "Sie können Ihre Meinung jederzeit ändern und Ghostery in den Ghostery-Einstellungen aktivieren, um Tracker für Sie zu verfolgen."
