--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -28,9 +28,6 @@
   "ad": {
     "message": "ad"
   },
-  "ad_blocking_DESC": {
-    "message": "Block advertisements on the pages you visit."
-  },
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
   },
@@ -61,10 +58,10 @@
     "message": "Anti-Tracking ON. Personal data will be anonymized."
   },
   "alert_autoconsent_off": {
-    "message": "alert_autoconsent_off"
+    "message": "Never-Consent OFF."
   },
   "alert_autoconsent_on": {
-    "message": "alert_autoconsent_on"
+    "message": "Never-Consent ON."
   },
   "alert_ghostery_paused": {
     "message": "Ghostery extension has been paused."
@@ -144,9 +141,6 @@
   "android_untrust": {
     "message": "Undo"
   },
-  "anti_tracking_DESC": {
-    "message": "Anonymize personal data for greater protection."
-  },
   "any_questions__anytime_": {
     "message": "Any questions? Anytime!"
   },
@@ -162,9 +156,6 @@
   "audio_video_player": {
     "message": "Audio/Video Player",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
-  },
-  "autoconsent_DESC": {
-    "message": "autoconsent_DESC"
   },
   "back": {
     "message": "Back"
@@ -745,7 +736,7 @@
     "message": "Anti-Tracking"
   },
   "enhanced_autoconsent": {
-    "message": "Never-consent"
+    "message": "Never-Consent"
   },
   "error_email_forgot": {
     "message": "Hmm, I can’t find that email. Maybe try another?"
@@ -1636,9 +1627,6 @@
   "smart_blocking": {
     "message": "Smart-Browsing"
   },
-  "smart_blocking_DESC": {
-    "message": "Automatically block and unblock trackers to optimize page performance."
-  },
   "social_media": {
     "message": "Social Media",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
@@ -1822,15 +1810,6 @@
   "too_many_password_resets_text": {
     "message": "Too many password reset requests. Try again in one hour."
   },
-  "tooltip_ad_block_on": {
-    "message": "Advertisements have been blocked."
-  },
-  "tooltip_anti_track_on": {
-    "message": "Personal data points anonymized."
-  },
-  "tooltip_autoconsent_on": {
-    "message": "tooltip_autoconsent_on"
-  },
   "tooltip_body_in_cliqz": {
     "message": "Feature already active in Cliqz by default."
   },
@@ -1845,9 +1824,6 @@
   },
   "tooltip_resume": {
     "message": "Resume Ghostery"
-  },
-  "tooltip_smart_block_on": {
-    "message": "Tracker blocking adjusted to optimize page performance."
   },
   "tooltip_trust": {
     "message": "Always allow trackers & disable Anti-Tracking on this site."
